<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.anusuz.MainActivity">
    <item
        android:id="@+id/btnSaveConfig"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_sobre"
        android:icon="@drawable/ic_menu_sobre_white"
        android:orderInCategory="101"
        android:title="@string/about"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_getout"
        android:icon="@drawable/ic_menu_sair_white"
        android:orderInCategory="102"
        android:title="@string/action_getout"
        app:showAsAction="withText" />
</menu>
