<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textImputLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/preto"
                android:theme="@style/myTextInputLabelBlack"
                app:layout_constraintBottom_toTopOf="@+id/textImputLayout4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:importantForAutofill="noExcludeDescendants"
                    android:id="@+id/textConfidence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confidence"
                    android:inputType="numberDecimal"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textImputLayout4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/preto"
                android:theme="@style/myTextInputLabelBlack"
                app:layout_constraintBottom_toTopOf="@+id/textImputLayout5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textImputLayout3">

                <com.google.android.material.textfield.TextInputEditText
                    android:importantForAutofill="noExcludeDescendants"
                    android:id="@+id/textDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/distance"
                    android:inputType="numberDecimal"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textImputLayout5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/preto"
                android:theme="@style/myTextInputLabelBlack"
                app:layout_constraintBottom_toTopOf="@+id/textImputLayout6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textImputLayout4">

                <com.google.android.material.textfield.TextInputEditText
                    android:importantForAutofill="noExcludeDescendants"
                    android:id="@+id/textFrameWidth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/frame_width"
                    android:inputType="number"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textImputLayout6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/preto"
                android:theme="@style/myTextInputLabelBlack"
                app:layout_constraintBottom_toTopOf="@+id/textImputLayout7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textImputLayout5">

                <com.google.android.material.textfield.TextInputEditText
                    android:importantForAutofill="noExcludeDescendants"
                    android:id="@+id/textLocal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/local"
                    android:inputType="textShortMessage"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textImputLayout7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/preto"
                android:theme="@style/myTextInputLabelBlack"
                app:layout_constraintBottom_toTopOf="@+id/textImputLayout8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textImputLayout6">

                <com.google.android.material.textfield.TextInputEditText
                    android:importantForAutofill="noExcludeDescendants"
                    android:id="@+id/textDisappear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/max_disappear"
                    android:inputType="number"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textImputLayout8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/preto"
                android:theme="@style/myTextInputLabelBlack"
                app:layout_constraintBottom_toTopOf="@+id/textImputLayout9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textImputLayout7">

                <com.google.android.material.textfield.TextInputEditText
                    android:importantForAutofill="noExcludeDescendants"
                    android:id="@+id/textMaxDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/max_distance"
                    android:inputType="number"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textImputLayout9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/preto"
                android:theme="@style/myTextInputLabelBlack"
                app:layout_constraintBottom_toTopOf="@+id/textImputLayout10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textImputLayout8">

                <com.google.android.material.textfield.TextInputEditText
                    android:importantForAutofill="noExcludeDescendants"
                    android:id="@+id/textSpeedLimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/speed_limit"
                    android:inputType="number"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textImputLayout10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp"
                android:textColorHint="@color/preto"
                android:theme="@style/myTextInputLabelBlack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textImputLayout9">

                <com.google.android.material.textfield.TextInputEditText
                    android:importantForAutofill="noExcludeDescendants"
                    android:id="@+id/textTrackObject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/track_object"
                    android:inputType="number"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBarMain"
        style="?android:attr/progressBarStyle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>